aumento accuratezza grazie a calcolo media con statistiche precedenti anche nel train set

--- a/definitivo/calculate_avg.ipynb
+++ b/definitivo/calculate_avg.ipynb
@@ -45,22 +45,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ma.reduce_dataset(\"2021-09-13\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ma.create_team_dataset()\n",
     "ma.split_and_set_avg()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +327,7 @@
        "[76 rows x 14 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,27 +338,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Model' object has no attribute 'analysis'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-c2ab0f402088>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_models\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#ml.gen_report()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_higher_accuracies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Documents/Università/Retrieval/The-winner-of-the-next-game/definitivo/classification.py\u001b[0m in \u001b[0;36mget_higher_accuracies\u001b[0;34m(self, distance)\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0;31m#get max accuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0manalysis\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Accuracy'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mmax_accuracy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0manalysis\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Accuracy'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m                 \u001b[0mmax_accuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Model' object has no attribute 'analysis'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ml.X_train, ml.X_test, ml.y_train, ml.y_test = ma.X_train, ma.X_test, ma.y_train, ma.y_test\n",
     "ml.create_models()\n",
     "ml.gen_report()\n",
-    "ml.get_higher_accuracies(0.1)"
+    "#ml.get_higher_accuracies(0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Avg Precision (macro)</th>\n",
+       "      <th>Avg Recall (macro)</th>\n",
+       "      <th>Avg F1-score (macro)</th>\n",
+       "      <th>Avg Precision (weighted)</th>\n",
+       "      <th>Avg Recall (weighted)</th>\n",
+       "      <th>Avg F1-score (weighted)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Logistic Regression</th>\n",
+       "      <td>0.434211</td>\n",
+       "      <td>0.495192</td>\n",
+       "      <td>0.456998</td>\n",
+       "      <td>0.436149</td>\n",
+       "      <td>0.533780</td>\n",
+       "      <td>0.434211</td>\n",
+       "      <td>0.448034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Support Vector Machine</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.331466</td>\n",
+       "      <td>0.430651</td>\n",
+       "      <td>0.373239</td>\n",
+       "      <td>0.385633</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.433840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Decision Tree</th>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.522764</td>\n",
+       "      <td>0.476606</td>\n",
+       "      <td>0.450246</td>\n",
+       "      <td>0.563960</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.460786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.522764</td>\n",
+       "      <td>0.476606</td>\n",
+       "      <td>0.450246</td>\n",
+       "      <td>0.563960</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.460786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>K-Nearest Neighbors</th>\n",
+       "      <td>0.394737</td>\n",
+       "      <td>0.406452</td>\n",
+       "      <td>0.380798</td>\n",
+       "      <td>0.383810</td>\n",
+       "      <td>0.441596</td>\n",
+       "      <td>0.394737</td>\n",
+       "      <td>0.408083</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
+       "Model                                                                         \n",
+       "Logistic Regression     0.434211               0.495192            0.456998   \n",
+       "Support Vector Machine  0.500000               0.331466            0.430651   \n",
+       "Decision Tree           0.447368               0.522764            0.476606   \n",
+       "Random Forest           0.447368               0.522764            0.476606   \n",
+       "K-Nearest Neighbors     0.394737               0.406452            0.380798   \n",
+       "\n",
+       "                        Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
+       "Model                                                                    \n",
+       "Logistic Regression                 0.436149                  0.533780   \n",
+       "Support Vector Machine              0.373239                  0.385633   \n",
+       "Decision Tree                       0.450246                  0.563960   \n",
+       "Random Forest                       0.450246                  0.563960   \n",
+       "K-Nearest Neighbors                 0.383810                  0.441596   \n",
+       "\n",
+       "                        Avg Recall (weighted)  Avg F1-score (weighted)  \n",
+       "Model                                                                   \n",
+       "Logistic Regression                  0.434211                 0.448034  \n",
+       "Support Vector Machine               0.500000                 0.433840  \n",
+       "Decision Tree                        0.447368                 0.460786  \n",
+       "Random Forest                        0.447368                 0.460786  \n",
+       "K-Nearest Neighbors                  0.394737                 0.408083  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ml.X_test"
    ]
   }
  ],
