gestione calcolo media per tutto il dataset o per solo il test set. Viene deciso passando un parametro True (avg all ds) o False (avg test) nel metodo split_and_set_avg

--- a/definitivo/classification_by_avg.ipynb
+++ b/definitivo/classification_by_avg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,21 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "ma.divide_and_merge_home_away()\n",
     "ma.create_team_dataset()\n",
-    "ma.split_and_set_avg()\n",
-    "float_features_and_avg = [x for x in ma.diff_dataset.columns if x != 'home' and x != 'away' and x != 'date' and x != 'result']\n",
-    "ma.calculate_avg_train(float_features_and_avg)\n",
-    "ma.calculate_avg(float_features_and_avg)"
+    "ma.split_and_set_avg(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -83,43 +80,69 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.592105</td>\n",
-       "      <td>0.567197</td>\n",
-       "      <td>0.540500</td>\n",
-       "      <td>0.533953</td>\n",
-       "      <td>0.578441</td>\n",
-       "      <td>0.592105</td>\n",
-       "      <td>0.569863</td>\n",
+       "      <td>0.434211</td>\n",
+       "      <td>0.495192</td>\n",
+       "      <td>0.456998</td>\n",
+       "      <td>0.436149</td>\n",
+       "      <td>0.533780</td>\n",
+       "      <td>0.434211</td>\n",
+       "      <td>0.448034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Support Vector Machine</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.331466</td>\n",
+       "      <td>0.430651</td>\n",
+       "      <td>0.373239</td>\n",
+       "      <td>0.385633</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.433840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Decision Tree</th>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.522764</td>\n",
+       "      <td>0.476606</td>\n",
+       "      <td>0.450246</td>\n",
+       "      <td>0.563960</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.460786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.578947</td>\n",
-       "      <td>0.518318</td>\n",
-       "      <td>0.521276</td>\n",
-       "      <td>0.509169</td>\n",
-       "      <td>0.548886</td>\n",
-       "      <td>0.578947</td>\n",
-       "      <td>0.555461</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.522764</td>\n",
+       "      <td>0.476606</td>\n",
+       "      <td>0.450246</td>\n",
+       "      <td>0.563960</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.460786</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
-       "Model                                                                      \n",
-       "Logistic Regression  0.592105               0.567197            0.540500   \n",
-       "Random Forest        0.578947               0.518318            0.521276   \n",
+       "                        Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
+       "Model                                                                         \n",
+       "Logistic Regression     0.434211               0.495192            0.456998   \n",
+       "Support Vector Machine  0.500000               0.331466            0.430651   \n",
+       "Decision Tree           0.447368               0.522764            0.476606   \n",
+       "Random Forest           0.447368               0.522764            0.476606   \n",
        "\n",
-       "                     Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
-       "Model                                                                 \n",
-       "Logistic Regression              0.533953                  0.578441   \n",
-       "Random Forest                    0.509169                  0.548886   \n",
+       "                        Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
+       "Model                                                                    \n",
+       "Logistic Regression                 0.436149                  0.533780   \n",
+       "Support Vector Machine              0.373239                  0.385633   \n",
+       "Decision Tree                       0.450246                  0.563960   \n",
+       "Random Forest                       0.450246                  0.563960   \n",
        "\n",
-       "                     Avg Recall (weighted)  Avg F1-score (weighted)  \n",
-       "Model                                                                \n",
-       "Logistic Regression               0.592105                 0.569863  \n",
-       "Random Forest                     0.578947                 0.555461  "
+       "                        Avg Recall (weighted)  Avg F1-score (weighted)  \n",
+       "Model                                                                   \n",
+       "Logistic Regression                  0.434211                 0.448034  \n",
+       "Support Vector Machine               0.500000                 0.433840  \n",
+       "Decision Tree                        0.447368                 0.460786  \n",
+       "Random Forest                        0.447368                 0.460786  "
       ]
      },
      "metadata": {},
