gestione ranking completato. ipynb classification si occupa di calcolare senza ranking, mentre integrate_datas tiene conto nel modello del ranking. Ci sono 4 modalità di previsione: ranking + X record media,

--- a/completati/avg_previous_matches.ipynb
+++ b/completati/avg_previous_matches.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Media dei match precedenti"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Questo script prende per ciascuna squadra tutte le partite giocate. \n",
+    "Per ciascuna partita predice le statistiche caloclando la media dei match precedenti. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
