--- a/definitivo/classification.ipynb
+++ b/definitivo/classification.ipynb
@@ -2,39 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from analysis import MatchAnalysis\n",
-    "from classification import Classification\n",
-    "from team import Team"
+    "from classification import Classification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma = MatchAnalysis()\n",
-    "ml = Classification()"
+    "ma = MatchAnalysis()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "ma.divide_and_merge_home_away()\n",
     "ma.create_team_dataset()\n",
-    "ma.split_and_set_avg(True)"
+    "ma.split_and_set_avg(False, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -80,43 +78,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.434211</td>\n",
-       "      <td>0.495192</td>\n",
-       "      <td>0.456998</td>\n",
-       "      <td>0.436149</td>\n",
-       "      <td>0.533780</td>\n",
-       "      <td>0.434211</td>\n",
-       "      <td>0.448034</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.415989</td>\n",
+       "      <td>0.392405</td>\n",
+       "      <td>0.367821</td>\n",
+       "      <td>0.429022</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.411570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Support Vector Machine</th>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.331466</td>\n",
-       "      <td>0.430651</td>\n",
-       "      <td>0.373239</td>\n",
-       "      <td>0.385633</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.433840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Decision Tree</th>\n",
-       "      <td>0.447368</td>\n",
-       "      <td>0.522764</td>\n",
-       "      <td>0.476606</td>\n",
-       "      <td>0.450246</td>\n",
-       "      <td>0.563960</td>\n",
-       "      <td>0.447368</td>\n",
-       "      <td>0.460786</td>\n",
+       "      <td>0.473684</td>\n",
+       "      <td>0.317593</td>\n",
+       "      <td>0.407280</td>\n",
+       "      <td>0.356777</td>\n",
+       "      <td>0.369152</td>\n",
+       "      <td>0.473684</td>\n",
+       "      <td>0.414806</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.447368</td>\n",
-       "      <td>0.522764</td>\n",
-       "      <td>0.476606</td>\n",
-       "      <td>0.450246</td>\n",
-       "      <td>0.563960</td>\n",
-       "      <td>0.447368</td>\n",
-       "      <td>0.460786</td>\n",
+       "      <td>0.434211</td>\n",
+       "      <td>0.389711</td>\n",
+       "      <td>0.388258</td>\n",
+       "      <td>0.377998</td>\n",
+       "      <td>0.423222</td>\n",
+       "      <td>0.434211</td>\n",
+       "      <td>0.417001</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -125,24 +113,21 @@
       "text/plain": [
        "                        Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
        "Model                                                                         \n",
-       "Logistic Regression     0.434211               0.495192            0.456998   \n",
-       "Support Vector Machine  0.500000               0.331466            0.430651   \n",
-       "Decision Tree           0.447368               0.522764            0.476606   \n",
-       "Random Forest           0.447368               0.522764            0.476606   \n",
+       "Logistic Regression     0.447368               0.415989            0.392405   \n",
+       "Support Vector Machine  0.473684               0.317593            0.407280   \n",
+       "Random Forest           0.434211               0.389711            0.388258   \n",
        "\n",
        "                        Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
        "Model                                                                    \n",
-       "Logistic Regression                 0.436149                  0.533780   \n",
-       "Support Vector Machine              0.373239                  0.385633   \n",
-       "Decision Tree                       0.450246                  0.563960   \n",
-       "Random Forest                       0.450246                  0.563960   \n",
+       "Logistic Regression                 0.367821                  0.429022   \n",
+       "Support Vector Machine              0.356777                  0.369152   \n",
+       "Random Forest                       0.377998                  0.423222   \n",
        "\n",
        "                        Avg Recall (weighted)  Avg F1-score (weighted)  \n",
        "Model                                                                   \n",
-       "Logistic Regression                  0.434211                 0.448034  \n",
-       "Support Vector Machine               0.500000                 0.433840  \n",
-       "Decision Tree                        0.447368                 0.460786  \n",
-       "Random Forest                        0.447368                 0.460786  "
+       "Logistic Regression                  0.447368                 0.411570  \n",
+       "Support Vector Machine               0.473684                 0.414806  \n",
+       "Random Forest                        0.434211                 0.417001  "
       ]
      },
      "metadata": {},
@@ -150,7 +135,7 @@
     }
    ],
    "source": [
-    "ml.X_train, ml.X_test, ml.y_train, ml.y_test = ma.X_train, ma.X_test, ma.y_train, ma.y_test\n",
+    "ml = Classification(ma.X_train, ma.X_test, ma.y_train, ma.y_test)\n",
     "ml.create_models()\n",
     "ml.gen_report()\n",
     "ml.get_higher_accuracies(0.1)"
