--- a/definitivo/classification.ipynb
+++ b/definitivo/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "ma.divide_and_merge_home_away()\n",
     "ma.create_team_dataset()\n",
-    "ma.split_and_set_avg(False, 10)"
+    "ma.split_and_set_avg(True, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,33 +78,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.447368</td>\n",
-       "      <td>0.415989</td>\n",
-       "      <td>0.392405</td>\n",
-       "      <td>0.367821</td>\n",
-       "      <td>0.429022</td>\n",
-       "      <td>0.447368</td>\n",
-       "      <td>0.411570</td>\n",
+       "      <td>0.513158</td>\n",
+       "      <td>0.551347</td>\n",
+       "      <td>0.549538</td>\n",
+       "      <td>0.512378</td>\n",
+       "      <td>0.582170</td>\n",
+       "      <td>0.513158</td>\n",
+       "      <td>0.515111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Support Vector Machine</th>\n",
-       "      <td>0.473684</td>\n",
-       "      <td>0.317593</td>\n",
-       "      <td>0.407280</td>\n",
-       "      <td>0.356777</td>\n",
-       "      <td>0.369152</td>\n",
-       "      <td>0.473684</td>\n",
-       "      <td>0.414806</td>\n",
+       "      <td>0.486842</td>\n",
+       "      <td>0.321662</td>\n",
+       "      <td>0.419540</td>\n",
+       "      <td>0.362823</td>\n",
+       "      <td>0.374023</td>\n",
+       "      <td>0.486842</td>\n",
+       "      <td>0.421504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Decision Tree</th>\n",
+       "      <td>0.486842</td>\n",
+       "      <td>0.508613</td>\n",
+       "      <td>0.527316</td>\n",
+       "      <td>0.483005</td>\n",
+       "      <td>0.530548</td>\n",
+       "      <td>0.486842</td>\n",
+       "      <td>0.479006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.434211</td>\n",
-       "      <td>0.389711</td>\n",
-       "      <td>0.388258</td>\n",
-       "      <td>0.377998</td>\n",
-       "      <td>0.423222</td>\n",
-       "      <td>0.434211</td>\n",
-       "      <td>0.417001</td>\n",
+       "      <td>0.486842</td>\n",
+       "      <td>0.508613</td>\n",
+       "      <td>0.527316</td>\n",
+       "      <td>0.483005</td>\n",
+       "      <td>0.530548</td>\n",
+       "      <td>0.486842</td>\n",
+       "      <td>0.479006</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -113,21 +123,24 @@
       "text/plain": [
        "                        Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
        "Model                                                                         \n",
-       "Logistic Regression     0.447368               0.415989            0.392405   \n",
-       "Support Vector Machine  0.473684               0.317593            0.407280   \n",
-       "Random Forest           0.434211               0.389711            0.388258   \n",
+       "Logistic Regression     0.513158               0.551347            0.549538   \n",
+       "Support Vector Machine  0.486842               0.321662            0.419540   \n",
+       "Decision Tree           0.486842               0.508613            0.527316   \n",
+       "Random Forest           0.486842               0.508613            0.527316   \n",
        "\n",
        "                        Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
        "Model                                                                    \n",
-       "Logistic Regression                 0.367821                  0.429022   \n",
-       "Support Vector Machine              0.356777                  0.369152   \n",
-       "Random Forest                       0.377998                  0.423222   \n",
+       "Logistic Regression                 0.512378                  0.582170   \n",
+       "Support Vector Machine              0.362823                  0.374023   \n",
+       "Decision Tree                       0.483005                  0.530548   \n",
+       "Random Forest                       0.483005                  0.530548   \n",
        "\n",
        "                        Avg Recall (weighted)  Avg F1-score (weighted)  \n",
        "Model                                                                   \n",
-       "Logistic Regression                  0.447368                 0.411570  \n",
-       "Support Vector Machine               0.473684                 0.414806  \n",
-       "Random Forest                        0.434211                 0.417001  "
+       "Logistic Regression                  0.513158                 0.515111  \n",
+       "Support Vector Machine               0.486842                 0.421504  \n",
+       "Decision Tree                        0.486842                 0.479006  \n",
+       "Random Forest                        0.486842                 0.479006  "
       ]
      },
      "metadata": {},
