--- a/definitivo/integrate_datas.ipynb
+++ b/definitivo/integrate_datas.ipynb
@@ -103,33 +103,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.526316</td>\n",
-       "      <td>0.366667</td>\n",
-       "      <td>0.452490</td>\n",
-       "      <td>0.405025</td>\n",
-       "      <td>0.426316</td>\n",
-       "      <td>0.526316</td>\n",
-       "      <td>0.470999</td>\n",
+       "      <td>0.434211</td>\n",
+       "      <td>0.495192</td>\n",
+       "      <td>0.456998</td>\n",
+       "      <td>0.436149</td>\n",
+       "      <td>0.533780</td>\n",
+       "      <td>0.434211</td>\n",
+       "      <td>0.448034</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Support Vector Machine</th>\n",
-       "      <td>0.486842</td>\n",
-       "      <td>0.334776</td>\n",
-       "      <td>0.418391</td>\n",
-       "      <td>0.370968</td>\n",
-       "      <td>0.388870</td>\n",
-       "      <td>0.486842</td>\n",
-       "      <td>0.431239</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.331466</td>\n",
+       "      <td>0.430651</td>\n",
+       "      <td>0.373239</td>\n",
+       "      <td>0.385633</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.433840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Decision Tree</th>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.522764</td>\n",
+       "      <td>0.476606</td>\n",
+       "      <td>0.450246</td>\n",
+       "      <td>0.563960</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.460786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.434211</td>\n",
-       "      <td>0.396303</td>\n",
-       "      <td>0.389407</td>\n",
-       "      <td>0.388553</td>\n",
-       "      <td>0.436647</td>\n",
-       "      <td>0.434211</td>\n",
-       "      <td>0.430609</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.522764</td>\n",
+       "      <td>0.476606</td>\n",
+       "      <td>0.450246</td>\n",
+       "      <td>0.563960</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.460786</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -138,21 +148,24 @@
       "text/plain": [
        "                        Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
        "Model                                                                         \n",
-       "Logistic Regression     0.526316               0.366667            0.452490   \n",
-       "Support Vector Machine  0.486842               0.334776            0.418391   \n",
-       "Random Forest           0.434211               0.396303            0.389407   \n",
+       "Logistic Regression     0.434211               0.495192            0.456998   \n",
+       "Support Vector Machine  0.500000               0.331466            0.430651   \n",
+       "Decision Tree           0.447368               0.522764            0.476606   \n",
+       "Random Forest           0.447368               0.522764            0.476606   \n",
        "\n",
        "                        Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
        "Model                                                                    \n",
-       "Logistic Regression                 0.405025                  0.426316   \n",
-       "Support Vector Machine              0.370968                  0.388870   \n",
-       "Random Forest                       0.388553                  0.436647   \n",
+       "Logistic Regression                 0.436149                  0.533780   \n",
+       "Support Vector Machine              0.373239                  0.385633   \n",
+       "Decision Tree                       0.450246                  0.563960   \n",
+       "Random Forest                       0.450246                  0.563960   \n",
        "\n",
        "                        Avg Recall (weighted)  Avg F1-score (weighted)  \n",
        "Model                                                                   \n",
-       "Logistic Regression                  0.526316                 0.470999  \n",
-       "Support Vector Machine               0.486842                 0.431239  \n",
-       "Random Forest                        0.434211                 0.430609  "
+       "Logistic Regression                  0.434211                 0.448034  \n",
+       "Support Vector Machine               0.500000                 0.433840  \n",
+       "Decision Tree                        0.447368                 0.460786  \n",
+       "Random Forest                        0.447368                 0.460786  "
       ]
      },
      "metadata": {},
