trasformazione in classe della lettura delle predizioni e scaricamento dati. Creazione modello Decision Tree con 80 di accuratezza

--- a/definitivo/text_analysis.ipynb
+++ b/definitivo/text_analysis.ipynb
@@ -36,7 +36,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una volta ottenuti i link andare combinando il link principale con la data delle partite, si va a cercare nella pagina al link tutti i vari link sotto al div relativo alla Serie A che portano alle pagine delle descrizioni pre-match."
+    "## Ottenimento link per data\n",
+    "Raggruppamento delle date in cui si svolgono le partite e la data viene settata in un url che verrà utilizzato per  andare a cercare le partite"
    ]
   },
   {
@@ -50,6 +51,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una volta ottenuti i link andare combinando il link principale con la data delle partite, si va a cercare nella pagina al link tutti i vari link sotto al div relativo alla Serie A che portano alle pagine delle descrizioni pre-match."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -57,6 +65,13 @@
    "source": [
     "#ta.read_urls()\n",
     "#ta.get_predictions()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ottenimento testo"
    ]
   },
   {
@@ -77,15 +92,6 @@
     "ta.recovery_games()\n",
     "ta.matches_not_found()\n",
     "ta.fix_dates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ta.dataset"
    ]
   }
  ],
